--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/form-owner/form-owner.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/form-owner/form-owner.component.html
@@ -49,7 +49,7 @@
 
         <input type="hidden" name="id" id="id" [(ngModel)]="owner.id">
 
-        <button type="submit" [disabled]="!ownerForm.valid">{{textoBoton}}</button>
+        <button type="submit" [disabled]="!ownerForm.valid">{{textoBoton}}</button> || 
         <button type="button" (click)="cancelarFormulario(owner.id)">Cancelar</button>
     </form>
 </div>
