Añadida funcionalidad de borrado y actualización del listado de visits en pet_clinic

--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-list/pet-list.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-list/pet-list.component.html
@@ -21,6 +21,6 @@
     <br><br>
     <hr align="left" width="20%">
 
-    <app-visit-list [visits]="pet.visits"></app-visit-list>
+    <app-visit-list [visits]="pet.visits" (visitDeleted)="actualizarListaPets($event)"></app-visit-list>
     <hr>
 }
