--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/visit-list/visit-list.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/visit-list/visit-list.component.html
@@ -11,7 +11,7 @@
         <tr>
             <th>Acciones: </th>
             <td><button type="button">Editar visita</button></td> || 
-            <td><button type="button">Borrar visita</button></td>
+            <td><button type="button" (click)="borrarVisita(visit.id)">Borrar visita</button></td>
         </tr>
         <hr align="left" width="70%">
     </table>
