Arreglado error de desaparición en type al editar el pet en pet_clinic

--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-add/pet-add.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/pet-add/pet-add.component.html
@@ -26,9 +26,16 @@
     <br><br>
 
     <select name="type" id="type" [(ngModel)]="pet.type" #type="ngModel" required>
-        <option [ngValue]="null" disabled selected> Seleccione un tipo</option>
+        @if (pet.type == null) {
+            <option [ngValue]="null" disabled selected> Seleccione un tipo</option>   
+        }
+
         @for (petType of petTypes; track $index) {
-            <option [ngValue]="petType">{{petType.name}}</option>
+            @if (petType.id === pet.type.id) {
+                <option [ngValue]="petType" selected>{{petType.name}}</option>
+            } @else {
+                <option [ngValue]="petType">{{petType.name}}</option>
+            }
         }
     </select>
     <div [hidden]="type.valid || type.pristine" >
