Añadida funcionalidad de borrar vet en pet_clinic

--- a/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/vets/vets.component.html
+++ b/CURSO/DWEC/ANGULAR/pet_clinic/src/app/components/vets/vets.component.html
@@ -25,7 +25,7 @@
                     }
                 </td>
                 <td><button type="button">Editar</button></td>
-                <td><button type="button">Borrar</button></td>
+                <td><button type="button" (click)="borrarVet(vet)">Borrar</button></td>
             </tr>
         }
     </tbody>
