--- a/CURSO/DWEC/ANGULAR/pruebasStandAlone/src/app/components/peliculas/peliculas.component.html
+++ b/CURSO/DWEC/ANGULAR/pruebasStandAlone/src/app/components/peliculas/peliculas.component.html
@@ -1,10 +1,10 @@
-<h2>Listado de intérpretes</h2>
+<h2>Listado de películas</h2>
 
 <button type="button" (click)="mostrarFormulario()">{{textButton}}</button>
 
 @if (mostrarForm) {
     <div>
-        <app-pelicula-form [idTraido]="-1"></app-pelicula-form>
+        <app-pelicula-form [idTraido]="-1" (peliculaNueva)="agregarPelicula($event)"></app-pelicula-form>
     </div>
 }
 <table border="1">
